--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,96 @@
     box-sizing: border-box;
 }
 
+/* SRTUCTURE */
+.container{
+    width : 1400px;
+    height: 100vh;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: black;
+}
+
+#container-frame{
+    display: flex;
+    width: 1200px;
+    height: 500px;
+    background-color: white;
+    flex-direction: row;
+}
+
+#selected-img-container{
+    height: 100%;
+    width: 85%;
+    background-color: aqua;
+}
+
+#carousel-container{
+    position: relative;
+    background-color: gold;
+    height: 100%;  
+    width: 15%;
+    
+
+}
+
+.prev, .next{
+    width: 20px;
+    height: 20px;
+    margin: 10px 0;
+    border-radius: 50%;
+    background: #ccc;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+    cursor: pointer;
+    z-index: 100;
+    text-align: center;
+    line-height: 20px;
+}
+
+.next{
+    bottom: 0;
+}
+
+.prev{
+    top: 0;
+}
+
+.item{
+    height: calc( 100% / 5);
+    width: 100%;
+    
+}
+
+.item-big{
+    width: 100%;
+    height: 100%;
+    display: none;
+    position: relative;
+    
+}
+
+.active{
+    display: block;
+}
+.item img, .item-big img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.item-big img{
+    position: absolute;
+}
+
+.image-text{
+    text-align: right;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    padding: 20px;
+    color: white;
+    
+}
