--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,15 @@
     box-sizing: border-box;
 }
 
+/* TYPOGRAPHY */
+body{
+    font-family: 'Roboto', sans-serif;
+}
+
+
 /* SRTUCTURE */
 .container{
-    width : 1400px;
+    width : 100vw;
     height: 100vh;
     margin: 0 auto;
     display: flex;
@@ -19,7 +25,7 @@
 #container-frame{
     display: flex;
     width: 1200px;
-    height: 500px;
+    height: 400px;
     background-color: white;
     flex-direction: row;
 }
