--- a/css/style.css
+++ b/css/style.css
@@ -33,12 +33,12 @@ body{
 #selected-img-container{
     height: 100%;
     width: 85%;
-    background-color: aqua;
+    background-color: aqua; /* DEBUG*/
 }
 
 #carousel-container{
     position: relative;
-    background-color: gold;
+    background-color: gold; /* DEBUG*/
     height: 100%;  
     width: 15%;
     
