--- a/css/style.css
+++ b/css/style.css
@@ -74,24 +74,20 @@ body{
     
 }
 
-.item-big{
+.item-selected{
     width: 100%;
     height: 100%;
-    display: none;
     position: relative;
     
 }
 
-.active{
-    display: block;
-}
-.item img, .item-big img{
+.item img, .item-selected img{
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
-.item-big img{
+.item-selected img{
     position: absolute;
 }
 
@@ -103,4 +99,8 @@ body{
     padding: 20px;
     color: white;
     
+}
+
+.active{
+    display: block;
 }
