--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@ body{
 }
 
 .prev, .next{
+    border: none;
     width: 20px;
     height: 20px;
     margin: 10px 0;
@@ -74,6 +75,17 @@ body{
     
 }
 
+.active{
+    display: block;
+}
+
+.item.active{
+    border: 2px solid white;
+}
+
+.item:not(.active){
+    filter: grayscale(0.8)
+}
 .item-selected{
     width: 100%;
     height: 100%;
@@ -101,6 +113,3 @@ body{
     
 }
 
-.active{
-    display: block;
-}
